# roplat_exrobot

./: Cargo.toml  build.rs  pyproject.toml  robot_behavior.pyi  roplat_exrobot.hpp  roplat_exrobot.pyi
examples/: capability_showcase.rs  version.rs
scripts/: arm_param.py  robot_behavior.py  version.py
src/: exrobot.rs  lib.rs  to_cxx.rs  to_py.rs
