[package]
name = "roplat_exrobot"
version = "0.1.2"
edition = "2024"
authors = ["Yixing <yanjizhou312@163.com>"]
readme = "README.md"
repository = "https://github.com/Robot-Exp-Platform/roplat_exrobot"
license = "Apache-2.0"
description = "a example robot behavior library for robot_behavior"

[lib]
name = "roplat_exrobot"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
robot_behavior = "0.5.1"
pyo3 = { version = "0.26", optional = true, features = [
    "extension-module",
    "multiple-pymethods",
] }
cxx = { version = "1.0", optional = true }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
anyhow = "1.0"

[build-dependencies]
cxx-build = "1.0"

[features]
default = []
ffi = []
to_py = ["pyo3", "ffi", "robot_behavior/to_py"]
to_cxx = ["cxx", "ffi", "robot_behavior/to_cxx"]
